--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -49,7 +49,7 @@
                                 </div>
                                 <div class="col-12">
                                     <label for="due_date">Due Date:</label>
-                                    <input type="date" name="due_date" id="due_date">
+                                    <input type="date" name="due_date" id="due_date" required>
                                 </div>
                                 <div class="col-12">
                                     <label for="priority">Priority:</label>
